--- a/web_server/templates/register.html
+++ b/web_server/templates/register.html
@@ -67,7 +67,7 @@
 
 <div class="border-top pt-3">
     <small class="text-muted">
-        已入局<a class="ml-2" href="{{ url_for('login') }}">点击登陆</a>
+        已入局<a class="ml-2" href="{{ url_for('users.login') }}">点击登陆</a>
     </small>
 </div>
 {% endblock content%}
