--- a/web_server/templates/reset_request.html
+++ b/web_server/templates/reset_request.html
@@ -29,7 +29,7 @@
 
 <div class="border-top pt-3">
     <small class="text-muted">
-        局外人<a class="ml-2" href="{{ url_for('register') }}">点击注册</a>
+        局外人<a class="ml-2" href="{{ url_for('users.register') }}">点击注册</a>
     </small>
 </div>
 {% endblock content%}
