--- a/web_server/templates/post.html
+++ b/web_server/templates/post.html
@@ -9,7 +9,7 @@
                 <small class="text-muted">{{ post.date_posted.strftime("%Y-%m-%d") }}</small>
                 {% if post.author == current_user %}
                     <div>
-                        <a class="btn btn-secondary btn-sm m-1" href="{{ url_for('update_post',post_id=post.id) }}">点击更新</a>
+                        <a class="btn btn-secondary btn-sm m-1" href="{{ url_for('posts.update_post',post_id=post.id) }}">点击更新</a>
                         <button type="button" class="but btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">点击删除</button>
                     </div>
                 {% endif %}
@@ -33,7 +33,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">慎之思之</button>
-            <form action="{{ url_for('delete_post',post_id=post.id)}}" method="POST">
+            <form action="{{ url_for('posts.delete_post',post_id=post.id)}}" method="POST">
                 <input class="btn btn-danger" type="submit" value="点击删除">
             </form>
           </div>
